--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -13,6 +13,7 @@ body {
     font-weight: normal;
     margin: 0;
     padding: 0;
+   
 }
 .clear {
     clear: both;
@@ -38,7 +39,7 @@ a{
 }
 #company_content section {
     width: 47%;
-    min-height: 190px;
+    min-height: 160px;
     display: block;
     float: left;
     font-size: 15px;
@@ -69,18 +70,20 @@ header {
 }
 .logo {
     width: 100%;
-    height: 147px;
+    height: 50px;
     background-color: #595451;
     display: block;
     float: left;
 }
 .logo img {
-    margin-left: 100px;
+    margin-left: 1px;
+    width: 300px;
+    
 }
 ul li {
     display: block;
     float: left;
-    font-size: 15px;
+    font-size: 16px;
     width: 146px;
     color: #fff;
     text-align: center;
@@ -170,4 +173,10 @@ footer ul li {
 .content_section p {
     line-height: 26px;
     text-align: justify;
+}
+
+dd{
+ display: list-item;
+    list-style-type: disc;
+    padding-top: 10px;
 }
